--- a/samples/aloha/.tkenvrc
+++ b/samples/aloha/.tkenvrc
@@ -34,7 +34,8 @@ config display-treeview	{1}
 config editor-case-sensitive	{0}
 config editor-whole-words	{0}
 config filtobjlist-order	{Class}
-inspector "alohaNet.server.collision multiplicity" "cOutVector" "2" "386x326+396+380"
 inspector "alohaNet.server.channel utilization" "cOutVector" "2" "386x326+3+19"
+inspector "alohaNet.server.collision multiplicity" "cOutVector" "2" "386x326+396+380"
 inspector "alohaNet.server.collision length" "cOutVector" "2" "386x326+3+378"
+inspector "alohaNet" "ALOHAnet" "2" "617x576+22+29"
 
