*** empty log message ***

--- a/samples/fifo/omnetpp.ini
+++ b/samples/fifo/omnetpp.ini
@@ -1,5 +1,5 @@
 [General]
-network = fifonet2
+network = fifonet
 sim-time-limit = 100h
 cpu-time-limit= 300s
 ini-warnings = no
@@ -14,13 +14,13 @@ event-banners = yes
 default-run=1
 
 [Run 1]
-fifonet2.gen.sendIaTime = exponential(0.1)
-fifonet2.gen.msgLength = 100
-fifonet2.fifo.bitsPerSec = 1000
+**.gen.sendIaTime = exponential(0.1)
+**.gen.msgLength = 100
+**.fifo.bitsPerSec = 1000
 output-vector-file = fifo-r1.vec
 
 [Run 2]
-fifonet2.gen.sendIaTime = exponential(0.01)
-fifonet2.gen.msgLength = 10
-fifonet2.fifo.bitsPerSec = 1000
+**.gen.sendIaTime = exponential(0.01)
+**.gen.msgLength = 10
+**.fifo.bitsPerSec = 1000
 output-vector-file = fifo-r2.vec
