*** empty log message ***

--- a/src/sim/Makefile.in
+++ b/src/sim/Makefile.in
@@ -49,7 +49,7 @@ CPPOBJS_PARSIM = parsim/ccommbuffer.o parsim/cmemcommbuffer.o \
          parsim/cidealsimulationprot.o parsim/cispeventlogger.o \
          parsim/cparsimcomm.o \
          parsim/ccommbufferbase.o parsim/cfilecomm.o parsim/cfilecommbuffer.o \
-         parsim/cnamedpipecomm.o parsim/cnamedpipecomm-win.o parsim\parsimutil.o \
+         parsim/cnamedpipecomm.o parsim/cnamedpipecomm-win.o parsim/parsimutil.o \
          parsim/creceivedexception.o
 CPPOBJS_MPI = parsim/cmpicomm.o parsim/cmpicommbuffer.o
 
