--- a/doc/src/manual/Makefile.vc
+++ b/doc/src/manual/Makefile.vc
@@ -20,6 +20,11 @@ HTM_FILES = history.htm \
 
 .SUFFIXES : .tex .bbl
 
+all: usman.html
+
+usman-bibl.bbl : usman.bbl
+	copy usman.bbl usman-bibl.bbl
+
 .bbl.htm:
 	copy $< $(<:.bbl=.tex)
 	$(PERL) ltoh.pl $(<:.bbl=.tex)
