--- a/src/nedc/Makefile.in
+++ b/src/nedc/Makefile.in
@@ -14,11 +14,12 @@ XML_LIBS=@XML_LIBS@
 
 OMNETPP_BIN_DIR=@OMNETPP_BIN_DIR@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
+OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 
 #
-# Local definitions
+# Local definitions (OMNETPP_INCL_DIR is used for platdep/*)
 #
-COPTS=$(CFLAGS)
+COPTS=$(CFLAGS) -I$(OMNETPP_INCL_DIR)
 
 OBJS=ebnf.tab.o lex.yy.o jar.o jar_lib.o jar_mod.o jar_expr.o jar_mem.o
 
