--- a/src/sim/Makefile.vc
+++ b/src/sim/Makefile.vc
@@ -278,9 +278,9 @@ cgate.obj: cgate.cc \
   ../../include/cgate.h \
   ../../include/cchannel.h \
   ../../include/cdispstr.h \
+  ../../include/util.h \
   ../../include/cobject.h \
   ../../include/defs.h \
-  ../../include/util.h \
   ../../include/cpolymorphic.h \
   ../../include/cexception.h \
   ../../include/cvisitor.h \
@@ -445,13 +445,13 @@ cmodule.obj: cmodule.cc \
   ../../include/cenvir.h \
   ../../include/cexception.h \
   ../../include/cdispstr.h \
+  ../../include/util.h \
   ../../include/defs.h \
   ../../include/cobject.h \
   ../../include/ccoroutine.h \
   ../../include/globals.h \
   ../../include/cqueue.h \
   ../../include/cdefaultlist.h \
-  ../../include/util.h \
   ../../include/cpolymorphic.h \
   ../../include/cvisitor.h \
   ../../include/onstartup.h \
@@ -833,7 +833,14 @@ cvarhist.obj: cvarhist.cc \
   ../../include/cstat.h \
   ../../include/opp_string.h
 cvisitor.obj: cvisitor.cc \
-  ../../include/cvisitor.h
+  ../../include/cvisitor.h \
+  ../../include/cobject.h \
+  ../../include/cenvir.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  ../../include/cpolymorphic.h \
+  ../../include/cexception.h \
+  ../../include/opp_string.h
 cwatch.obj: cwatch.cc \
   ../../include/cwatch.h \
   ../../include/cobject.h \
@@ -1119,6 +1126,9 @@ parsim/cfilecomm.obj: parsim/cfilecomm.cc \
   parsim/cfilecommbuffer.h \
   ../../include/macros.h \
   ../../include/cenvir.h \
+  ../../include/cconfig.h \
+  parsim/parsimutil.h \
+  ../../include/platdep/misc.h \
   ../../include/defs.h \
   ../../include/opp_string.h \
   ../../include/util.h \
@@ -1154,6 +1164,7 @@ parsim/cidealsimulationprot.obj: parsim/cidealsimulationprot.cc \
   ../../include/cmodule.h \
   ../../include/cgate.h \
   ../../include/cenvir.h \
+  ../../include/cconfig.h \
   parsim/cidealsimulationprot.h \
   parsim/cplaceholdermod.h \
   parsim/cparsimpartition.h \
@@ -1310,6 +1321,8 @@ parsim/cnamedpipecomm-win.obj: parsim/cnamedpipecomm-win.cc \
   parsim/cmemcommbuffer.h \
   ../../include/macros.h \
   ../../include/cenvir.h \
+  ../../include/cconfig.h \
+  parsim/parsimutil.h \
   ../../include/util.h \
   ../../include/opp_string.h \
   ../../include/cparsimcomm.h \
@@ -1329,6 +1342,8 @@ parsim/cnamedpipecomm.obj: parsim/cnamedpipecomm.cc \
   parsim/cmemcommbuffer.h \
   ../../include/macros.h \
   ../../include/cenvir.h \
+  ../../include/cconfig.h \
+  parsim/parsimutil.h \
   ../../include/util.h \
   ../../include/opp_string.h \
   ../../include/cparsimcomm.h \
@@ -1380,6 +1395,7 @@ parsim/cnullmessageprot.obj: parsim/cnullmessageprot.cc \
   ../../include/cmodule.h \
   ../../include/cgate.h \
   ../../include/cenvir.h \
+  ../../include/cconfig.h \
   parsim/cnullmessageprot.h \
   parsim/clinkdelaylookahead.h \
   parsim/cparsimpartition.h \
@@ -1435,6 +1451,7 @@ parsim/cparsimpartition.obj: parsim/cparsimpartition.cc \
   parsim/creceivedexception.h \
   parsim/messagetags.h \
   ../../include/cenvir.h \
+  ../../include/cconfig.h \
   ../../include/macros.h \
   ../../include/cobject.h \
   ../../include/carray.h \
@@ -1495,6 +1512,7 @@ parsim/cplaceholdermod.obj: parsim/cplaceholdermod.cc \
   parsim/cnosynchronization.h \
   parsim/cnullmessageprot.h \
   parsim/cidealsimulationprot.h \
+  parsim/clinkdelaylookahead.h \
   ../../include/cmodule.h \
   ../../include/csimul.h \
   ../../include/defs.h \
@@ -1520,7 +1538,8 @@ parsim/cplaceholdermod.obj: parsim/cplaceholdermod.cc \
   parsim/cparsimsynchr.h \
   ../../include/cscheduler.h \
   ../../include/cmessage.h \
-  ../../include/cpar.h
+  ../../include/cpar.h \
+  parsim/cnmplookahead.h
 parsim/cproxygate.obj: parsim/cproxygate.cc \
   parsim/cproxygate.h \
   parsim/cparsimpartition.h \
@@ -1548,6 +1567,13 @@ parsim/cproxygate.obj: parsim/cproxygate.cc \
   ../../include/cpar.h
 parsim/creceivedexception.obj: parsim/creceivedexception.cc \
   parsim/creceivedexception.h \
+  ../../include/cexception.h \
+  ../../include/defs.h \
+  ../../include/opp_string.h \
+  ../../include/util.h
+parsim/parsimutil.obj: parsim/parsimutil.cc \
+  ../../include/cenvir.h \
+  parsim/parsimutil.h \
   ../../include/cexception.h \
   ../../include/defs.h \
   ../../include/opp_string.h \
