--- a/src/scalars/Makefile.vc
+++ b/src/scalars/Makefile.vc
@@ -6,7 +6,7 @@
 #
 # Local setup
 #
-!if "$(SCALARS_EMBED_TCL)"=="yes"
+!if "$(EMBED_TCL_CODE)"=="yes"
 SCALARS_EMBED_SUFFIX=-e
 !else
 SCALARS_EMBED_SUFFIX=
