--- a/src/plove/Makefile.in
+++ b/src/plove/Makefile.in
@@ -96,4 +96,155 @@ clean:
 	rm -f tclcode.cc *.o plove$(EXE_SUFFIX)
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-plove.o: plove.cc
+plove.o: plove.cc \
+  tklib.h
+tkcmd.o: tkcmd.cc \
+  tklib.h \
+  engine/node.h \
+  engine/nodetype.h \
+  engine/nodetyperegistry.h \
+  engine/dataflowmanager.h \
+  engine/arraybuilder.h \
+  engine/compoundfilter.h \
+  engine/getvectors.h \
+  engine/util.h \
+  engine/exception.h \
+  engine/channel.h \
+  engine/commonnodes.h
+tklib.o: tklib.cc \
+  tklib.h \
+  tkutil.h
+tkutil.o: tkutil.cc \
+  tkutil.h
+engine/arraybuilder.o: engine/arraybuilder.cc \
+  engine/channel.h \
+  engine/arraybuilder.h \
+  engine/util.h \
+  engine/node.h \
+  engine/exception.h \
+  engine/commonnodes.h \
+  engine/nodetype.h \
+  engine/dataflowmanager.h
+engine/channel.o: engine/channel.cc \
+  engine/channel.h \
+  engine/util.h \
+  engine/node.h \
+  engine/exception.h
+engine/commonnodes.o: engine/commonnodes.cc \
+  engine/commonnodes.h \
+  engine/channel.h \
+  engine/node.h \
+  engine/nodetype.h \
+  engine/util.h \
+  engine/exception.h \
+  engine/dataflowmanager.h
+engine/compoundfilter.o: engine/compoundfilter.cc \
+  engine/util.h \
+  engine/compoundfilter.h \
+  engine/filternodes.h \
+  engine/nodetyperegistry.h \
+  engine/exception.h \
+  engine/nodetype.h \
+  engine/commonnodes.h \
+  engine/dataflowmanager.h \
+  engine/node.h \
+  engine/channel.h
+engine/dataflowmanager.o: engine/dataflowmanager.cc \
+  engine/channel.h \
+  engine/nodetype.h \
+  engine/dataflowmanager.h \
+  engine/util.h \
+  engine/node.h \
+  engine/exception.h
+engine/exception.o: engine/exception.cc \
+  engine/exception.h
+engine/filewriter.o: engine/filewriter.cc \
+  engine/channel.h \
+  engine/filewriter.h \
+  engine/util.h \
+  engine/node.h \
+  engine/exception.h \
+  engine/commonnodes.h \
+  engine/nodetype.h \
+  engine/dataflowmanager.h
+engine/filternodes.o: engine/filternodes.cc \
+  engine/channel.h \
+  engine/filternodes.h \
+  engine/util.h \
+  engine/node.h \
+  engine/exception.h \
+  engine/commonnodes.h \
+  engine/nodetype.h \
+  engine/dataflowmanager.h
+engine/getvectors.o: engine/getvectors.cc \
+  engine/getvectors.h \
+  engine/util.h \
+  engine/exception.h
+engine/mergernodes.o: engine/mergernodes.cc \
+  engine/channel.h \
+  engine/mergernodes.h \
+  engine/util.h \
+  engine/node.h \
+  engine/exception.h \
+  engine/commonnodes.h \
+  engine/nodetype.h \
+  engine/dataflowmanager.h
+engine/nodetype.o: engine/nodetype.cc \
+  engine/util.h \
+  engine/nodetype.h \
+  engine/exception.h \
+  engine/dataflowmanager.h \
+  engine/node.h \
+  engine/channel.h
+engine/nodetyperegistry.o: engine/nodetyperegistry.cc \
+  engine/util.h \
+  engine/nodetyperegistry.h \
+  engine/arraybuilder.h \
+  engine/vectorfilereader.h \
+  engine/vectorfilewriter.h \
+  engine/filewriter.h \
+  engine/windowavg.h \
+  engine/filternodes.h \
+  engine/mergernodes.h \
+  engine/xyplotnode.h \
+  engine/exception.h \
+  engine/commonnodes.h \
+  engine/node.h \
+  engine/nodetype.h \
+  engine/dataflowmanager.h \
+  engine/channel.h
+engine/test.o: engine/test.cc
+engine/vectorfilereader.o: engine/vectorfilereader.cc \
+  engine/channel.h \
+  engine/vectorfilereader.h \
+  engine/util.h \
+  engine/node.h \
+  engine/exception.h \
+  engine/nodetype.h \
+  engine/dataflowmanager.h
+engine/vectorfilewriter.o: engine/vectorfilewriter.cc \
+  engine/channel.h \
+  engine/vectorfilewriter.h \
+  engine/util.h \
+  engine/node.h \
+  engine/exception.h \
+  engine/nodetype.h \
+  engine/dataflowmanager.h
+engine/windowavg.o: engine/windowavg.cc \
+  engine/channel.h \
+  engine/windowavg.h \
+  engine/util.h \
+  engine/node.h \
+  engine/exception.h \
+  engine/commonnodes.h \
+  engine/nodetype.h \
+  engine/dataflowmanager.h
+engine/xyplotnode.o: engine/xyplotnode.cc \
+  engine/channel.h \
+  engine/xyplotnode.h \
+  engine/util.h \
+  engine/node.h \
+  engine/exception.h \
+  engine/commonnodes.h \
+  engine/nodetype.h \
+  engine/dataflowmanager.h
