--- a/src/cmdenv/Makefile.in
+++ b/src/cmdenv/Makefile.in
@@ -61,11 +61,11 @@ cmdenv.o: cmdenv.cc \
   cmdenv.h \
   enumstr.h \
   ../envir/appreg.h \
-  ../envir/cinifile.h \
   ../../include/csimplemodule.h \
   ../../include/cmessage.h \
   ../envir/args.h \
   ../envir/speedmtr.h \
+  ../../include/platdep/time.h \
   ../../include/defs.h \
   ../../include/ctypes.h \
   ../../include/csimul.h \
@@ -77,6 +77,7 @@ cmdenv.o: cmdenv.cc \
   ../../include/util.h \
   ../../include/cpolymorphic.h \
   ../../include/cexception.h \
+  ../../include/cvisitor.h \
   ../../include/opp_string.h \
   ../../include/errmsg.h \
   ../../include/cmsgheap.h \
@@ -85,6 +86,7 @@ cmdenv.o: cmdenv.cc \
   ../../include/carray.h \
   ../envir/envdefs.h \
   ../../include/envirext.h \
+  ../../include/cconfig.h \
   ../../include/cmodule.h \
   ../../include/cqueue.h \
   ../../include/cgate.h \
