--- a/src/scalars/Makefile.in
+++ b/src/scalars/Makefile.in
@@ -76,4 +76,29 @@ clean:
 	rm -f tclcode.cc *.o scalars$(EXE_SUFFIX)
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-scalars.o: scalars.cc
+scalars.o: scalars.cc \
+  tklib.h
+tkcmd.o: tkcmd.cc \
+  tklib.h \
+  tkutil.h \
+  engine/scalarmanager.h \
+  engine/filtering.h \
+  engine/texception.h
+tklib.o: tklib.cc \
+  tklib.h \
+  tkutil.h
+tkutil.o: tkutil.cc \
+  tkutil.h
+engine/filtering.o: engine/filtering.cc \
+  engine/patmatch.h \
+  engine/filtering.h \
+  engine/scalarmanager.h \
+  engine/texception.h
+engine/patmatch.o: engine/patmatch.cc \
+  engine/patmatch.h
+engine/scalarmanager.o: engine/scalarmanager.cc \
+  engine/patmatch.h \
+  engine/scalarmanager.h \
+  engine/texception.h
+engine/texception.o: engine/texception.cc \
+  engine/texception.h
