--- a/configure.in
+++ b/configure.in
@@ -393,6 +393,11 @@ fi
 if echo 'catch {package require Tk 8.4; puts OK}; exit' | $WISH | grep OK >/dev/null; then :; else
     AC_MSG_ERROR([wish command "package require Tk 8.4" failed: probably old Tcl/Tk version, version 8.4.0+ required])
 fi
+WISH_NAMED_DIFFERENTLY=yes
+if test "$WISH" = "wish" -o grep '/wish$' `echo $WISH` >/dev/null; then
+    WISH_NAMED_DIFFERENTLY=no
+fi
+
 
 #----------------------
 # Check for BLT. $TK_CFLAGS and $TK_LIBS plus $BLT_LIBS should be enough
@@ -589,6 +594,7 @@ AC_SUBST(AR)
 AC_SUBST(RANLIB)
 AC_SUBST(SHLIB_LD)
 AC_SUBST(WISH)
+AC_SUBST(WISH_NAMED_DIFFERENTLY)
 AC_SUBST(MAKEDEPEND)
 AC_SUBST(XSLTPROC)
 AC_SUBST(GHOSTSCRIPT)
