--- a/configure.in
+++ b/configure.in
@@ -394,7 +394,10 @@ if echo 'catch {package require Tk 8.4; puts OK}; exit' | $WISH | grep OK >/dev/
     AC_MSG_ERROR([wish command "package require Tk 8.4" failed: probably old Tcl/Tk version, version 8.4.0+ required])
 fi
 WISH_NAMED_DIFFERENTLY=yes
-if test "$WISH" = "wish" -o grep '/wish$' `echo $WISH` >/dev/null; then
+if test "$WISH" = "wish"; then
+    WISH_NAMED_DIFFERENTLY=no
+fi
+if echo $WISH | grep '/wish$' >/dev/null; then
     WISH_NAMED_DIFFERENTLY=no
 fi
 
