*** empty log message ***

--- a/src/utils/Makefile.in
+++ b/src/utils/Makefile.in
@@ -5,7 +5,6 @@ CXX=@CXX@
 CC=@CC@
 MAKEDEPEND=@MAKEDEPEND@
 WISH=@WISH@
-WISH_NAMED_DIFFERENTLY=@WISH_NAMED_DIFFERENTLY@
 
 CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@
@@ -25,11 +24,7 @@ all: seedtool tcl2c
 	cp neddoc.xsl $(OMNETPP_BIN_DIR)
 	cp neddocproc.pl $(OMNETPP_BIN_DIR)
 	../utils/install-prog seedtool $(OMNETPP_BIN_DIR)
-	if test "$(WISH_NAMED_DIFFERENTLY)" = "yes"; then \
-	    echo $(WISH) >wish \
-	    chmod +x wish \
-	    cp wish $(OMNETPP_BIN_DIR) \
-	fi
+	if test "$(WISH)" != "wish"; then echo $(WISH) > $(HOME)/.wishname; fi
 
 seedtool : seedtool.cc
 	$(CXX) seedtool.cc -o seedtool
