--- a/samples/sockets/omnetpp.ini
+++ b/samples/sockets/omnetpp.ini
@@ -1,7 +1,6 @@
 [General]
 preload-ned-files=*.ned
 scheduler-class = "cSocketRTScheduler"
-network = httpNet
 #network = sshNet
 
 [Cmdenv]
@@ -13,5 +12,7 @@ event-banners = yes
 default-run=1
 
 [Run 1]
-**.cloud.propDelay = 0.5
+network = httpNet
+**.cloud.propDelay = 0.5s
+**.server.serviceTime= 0.5s
 **.client[*].sendIaTime = exponential(3)
