*** empty log message ***

--- a/samples/sockets/omnetpp.ini
+++ b/samples/sockets/omnetpp.ini
@@ -16,3 +16,9 @@ network = httpNet
 **.cloud.propDelay = 0.5s
 **.server.serviceTime= 0.5s
 **.client[*].sendIaTime = exponential(3)
+
+[Run 2]
+network = telnetNet
+**.cloud.propDelay = 0.5s
+**.server.serviceTime= 0.5s
+**.client[*].sendIaTime = exponential(3)
