--- a/src/envir/Makefile.vc
+++ b/src/envir/Makefile.vc
@@ -16,7 +16,8 @@ CFLAGS=$(CFLAGS) /DWITH_NETBUILDER
 #
 COPTS=$(CFLAGS) /I "$(OMNETPP_INCL_DIR)" /I "../sim" /DBUILDING_ENVIR /DHAVE_DLOPEN=$(HAVE_DLOPEN)
 OBJS=args.obj cenvir.obj cinifile.obj main.obj omnetapp.obj fsutils.obj \
-     patmatch.obj speedmtr.obj filemgrs.obj akoutvectormgr.obj cxmldoccache.obj
+     patmatch.obj speedmtr.obj filemgrs.obj akoutvectormgr.obj \
+     akaroarng.obj cxmldoccache.obj
 LIBS=$(OMNETPP_SRC_DIR)/sim/sim_std.ilib
 
 #
