--- a/src/tkenv/Makefile.vc
+++ b/src/tkenv/Makefile.vc
@@ -42,12 +42,13 @@ tkenv : tkenv$(LIB_SUFFIX)
 
 tkenv.lib : $(OBJS)
 	$(AR) /nologo /out:tkenv.lib $(OBJS)
-        copy tkenv.lib $(OMNETPP_LIB_DIR:/=\)
+	copy tkenv.lib $(OMNETPP_LIB_DIR:/=\)
+	- copy /b vc?0.pdb $(OMNETPP_LIB_DIR:/=\)\tkenv.pdb 2>nul
 
 tkenv.dll : $(OBJS) $(LIBS)
 	$(SHLIB_LD) /nologo /out:tkenv.dll /implib:tkenv.ilib /subsystem:console /def:tkenv.def $(OBJS) $(LIBS)
-        copy tkenv.dll $(OMNETPP_LIB_DIR:/=\)
-        copy tkenv.ilib $(OMNETPP_LIB_DIR:/=\)
+	copy tkenv.dll $(OMNETPP_LIB_DIR:/=\)
+	copy tkenv.ilib $(OMNETPP_LIB_DIR:/=\)
 
 tkapp.obj : tkapp.cc
 	$(CXX) /DOMNETPP_TKENV_DIR="\"$(OMNETPP_TKENV_DIR)\"" /DOMNETPP_BITMAP_PATH="\"$(OMNETPP_BITMAP_PATH)\"" $(COPTS) /c /Tp tkapp.cc
